@@ -23,6 +23,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 @Configuration
 @RequiredArgsConstructor
@@ -57,9 +58,9 @@ public class SecurityConfig {
                                 configuration.setAllowedOrigins(Collections.singletonList("http://localhost:3000"));
                                 configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
                                 configuration.setAllowCredentials(true);
-                                configuration.setAllowedHeaders(Arrays.asList("Authorization", "Cache-Control", "Content-Type"));
+                                configuration.setAllowedHeaders(Arrays.asList("access", "Cache-Control", "Content-Type"));
                                 configuration.setMaxAge(3600L);
-                                configuration.setExposedHeaders(Arrays.asList("Authorization", "access"));
+                                configuration.setExposedHeaders(List.of("access"));
 
                                 return configuration;
                             }
